# exawer_ate

./: .coverage  .gitignore  Dockerfile  Makefile  README.md  coverage.json  docker-compose.yml  modular_tools.sh  pyproject.toml
ate/: __init__.py  cli.py  errors.py  ir.py  normalize.py
ate/parsers/: __init__.py  dispatch.py  docx_parser.py  pdf_parser.py  txt_parser.py
ate/planner/: __init__.py  ai_cache.json  ai_cache.v1.json.bak  ai_enricher.py  atomic_rows.py  categories.py  cli_crosscheck.py  cli_extractor.py  cli_inheritance.py  cli_rows.py  curated.py  equipment.py  extractor.py  feature_catalog.py  flows.py  generator.py  model.py  req_classifier.py  requirements_builder.py  rfc_crosscheck.py  rfc_extractor.py  (+1 more)
docs/: M1_acceptance.md  TDD.md  anti_hallucination.md  exaware-acceptance.md  rfc_relevance_design.md
plans/: EVPN_test_plan_with_RFCs.xlsx
references/: DHCP-snoopy_TP_with_PW.xlsx  EVPN CLI 1.00.docx  Feature Name Test Plan Template.xlsx  draft-ietf-bess-rfc7432bis-13.docx
scripts/: build_ai_cache.py  build_ai_cache_v1_archive.py  build_docs_docx.py  build_goldens.py  build_tier_c.py  report.py  score.py  verify_env.py
tests/: conftest.py  test_ai_enricher.py  test_atomic_rows.py  test_cli.py  test_cli_crosscheck.py  test_cli_extractor.py  test_cli_inheritance.py  test_cli_rows.py  test_curated.py  test_determinism.py  test_dispatch.py  test_edge_cases.py  test_equipment.py  test_parity.py  test_parsers.py  test_planner.py  test_regression.py  test_req_classifier.py  test_requirements_builder.py  test_rfc_crosscheck.py  test_rfc_extractor.py
(+30 files in other folders)
